--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -35,6 +35,7 @@
     --color-ruby: #9B111E;
     --color-lightRuby: #DB1D2F;
     --color-darkRuby: #60070F;
+    --color-hoverRuby: rgba(155, 17, 30, 0.7);
     --color-ruby2: #B61B29;
     --color-lightRuby2: #F62B3D;
     --color-darkRuby2: #790E18;
